	- Add new function SetLegendMarks() to allow multiple marks in Legend() sample.
	- Add QuadPlot() functions for making plot of unregular quadrangle mesh (like TriPlot()).
	- Add TriCont[V]() functions for plotting contour lines for unregular triangle mesh.
	- Add Grad() for plotting gradient of scalar field by flow threads.
	- Add "styled" SubPlot() to better fitting of subplot according axis/colorbar/title layouts.
	- Add extra text align for axis label if it is located near minimal or maximal axis value.
	- Add possibility to read HDF4 files in mglData.
	- Add MGL commands 'grad', 'quadplot', 'tricont'
	- Add 'int(x)' function to the expression parser (class mglFormula).
	- Add \textsc{} for small-caps to TeX parsing.
	- Add optional gap for ColumnPlot.
	- Colorbar position can be specified in sch string: ‘>’ - right, ‘<’ - left, ‘^’ - above, ‘_’ - under. If string have 'A' then absolute coordiantes is used.
	- Legend coordinates set absolute position if font argument contain 'A' symbol.
	- Font files can be compressed now by 'gzip'.
	- Allow defining manual array in MGL command argument as [v1,v2,v3,...]. Array can be multidimensional like [[v1,v2],[v3,v4]].
	- Restrict usage of original and wrapper classes simultaneously.
	- Now Plot() and Tens() now "accurately" cut off line segments.
	- Now $N is substituted into the second argument of MGL commands 'define', 'defnum', 'defpal', 'defchr'.
	- Reduce animation delay to 1 sec.
	- mglGraphFLTK::Update() now force window redrawing.
	- Bugfix with newline symbol '\n'
	- Bugfix with wrong restore previous InPlot() after text with style 'a'.
	- Bugfix for label position for log-scale axis.
	- Bugfix for mglData::Insert().
	- Bugfix for text and marks drawing in OpenGL mode.
	- Bugfix for T-ticks orientation in Ternary plot.
	- Bugfix for text position with 'a' option after Rotate().
	- Bugfix for keeping bold/italic text formating of next symbol.
	- Bugfix for Ternary axis with Min.y!=0.